[tool.poetry]
name = "sap-clone"
version = "0.1.0"
description = ""
authors = ["\"Jordan Griveau\""]
readme = "README.md"
packages = [{include = "sap_clone"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
